--- a/style.scss
+++ b/style.scss
@@ -25,7 +25,8 @@ body {
     background-color: #e5e5e5;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
+    justify-content: flex-end;
     min-height: 100vh;
 }
 
